--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>CoreIdentity - AI Governance Platform</title>
+    <title>CoreIdentity Governance Portal</title>
   </head>
   <body>
     <div id="root"></div>
