--- a/public/init.html
+++ b/public/init.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>Initializing...</title></head>
+<head><title>Initializing CoreIdentity Portal...</title></head>
 <body>
 <script>
-localStorage.setItem('ci_token','eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiIzN2FjYzUyOC1hNDY5LTRkMWYtYTYxNC0zMTdhNDg5OTAxNjMiLCJlbWFpbCI6InRtb3JnYW5AY29yZWhvbGRpbmdjb3JwLmNvbSIsInJvbGUiOiJBRE1JTiIsImZpcnN0TmFtZSI6IlRvZGQiLCJpYXQiOjE3NzIzNzg5NjksImV4cCI6MTc3MjQ2NTM2OX0.2wgHgIxQSJuuYMUffLqyh4y1LMTfQzQvIqSCJZpK1h4');
+localStorage.setItem('ci_token','eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiIzN2FjYzUyOC1hNDY5LTRkMWYtYTYxNC0zMTdhNDg5OTAxNjMiLCJlbWFpbCI6InRtb3JnYW5AY29yZWhvbGRpbmdjb3JwLmNvbSIsInJvbGUiOiJBRE1JTiIsImZpcnN0TmFtZSI6IlRvZGQiLCJpYXQiOjE3NzIzNzk4NDgsImV4cCI6MTc3MjQ2NjI0OH0.3uBrbiQtfSKnMUCqTEIDekZsPCbgtg_3OPJUcswOdE0');
 localStorage.setItem('ci_user','{"userId":"37acc528-a469-4d1f-a614-317a48990163","email":"tmorgan@coreholdingcorp.com","firstName":"Todd","lastName":"Morgan","role":"ADMIN"}');
 window.location.href = 'https://portal.coreholdingcorp.com/#/dashboard';
 </script>
